# csv-agent-tool

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: cancellation.md  project.md
packaging/: product_description_tool.spec
src/product_description_tool/: __init__.py  __main__.py  app.py  collapsible_panel.py  config.py  csv_repository.py  dialogs.py  filter_proxy.py  generation.py  highlighter.py  main_window.py  preview.py  project.py  prompt_renderer.py  providers.py  table_model.py  worker.py
tests/: conftest.py  test_csv_repository.py  test_dialogs.py  test_filter_proxy.py  test_main_window.py  test_preview.py  test_project.py  test_prompt_renderer.py  test_providers.py
